<resources>
    <string name="app_name">FH Hof Dater</string>
    <string name="label_profil">Profil</string>
    <string name="label_settings">Einstellungen</string>
    <string name="label_message">Deine Nachrichten</string>
    <string name="label_cards">Deine Karten</string>
    <string name="label_matches">Deine Matches</string>

    <string name="username">username</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="textView_messages">Deine Nachrichten</string>
    <string name="textView_profile">Dein Profil</string>
    <string name="textView_settings">Einstellungen</string>

    <string name="profile_firstname">Vorname</string>
    <string name="profile_lastname">Nachname</string>
    <string name="profile_age">Alter</string>
    <string name="profile_gender">Geschlecht</string>
    <string name="profile_language">Sprache</string>
    <string name="profile_infoText">Infomationen</string>
    <string name="profile_email">Email</string>
    <string name="profile_visible">Sichtbarkeit</string>

    <string name="user_lastname">user_lastname</string>
    <string name="user_age">user_age</string>
    <string name="user_gender">user_gender</string>
    <string name="user_language">user_language</string>
    <string name="user_infoText">user_infoText</string>
    <string name="user_email">user_email</string>
    <string name="user_vivible">user_vivible</string>

    <string name="editProfil">Profil bearbeiten</string>
    <string name="saveProfil">Änderungen speichern</string>
    <string name="user_hobby">user_hobby</string>
    <string name="profile_hobby">Hobbies</string>


    <string name="login_username_label">Benutzername</string>
    <string name="login_password">Passwort</string>
    <string name="login_newUser">Neuer Benutzer? Jetzt Anmelden!</string>
    <string name="login_resetPassword">Passwort vergessen?</string>
    <string name="login_button_label">Login</string>
    <string name="user_firstname">user_firstname</string>
    <string name="card_picture_description">picture of other user</string>
    <string name="like">Like</string>
    <string name="dislike">Dislike</string>
    <string name="card_otherUsername">other Username</string>
    <string name="profile_username">Benutzername</string>
    <string name="user_username">user_username</string>
    <string name="profile_password">Passwort</string>
    <string name="user_password">user_password</string>
    <string name="newProfile_label">Account erstellen</string>
    <string name="an">An</string>
    <string name="aus">Aus</string>
    <string name="profile_gender_preference">Geschlechts Präferenz</string>
    <string name="language_label">Sprache</string>
    <string name="maxAge_label">Höchstalter</string>
    <string name="label_filter">Dein Filter</string>
    <string name="minAge_label">Mindestalter</string>
    <string name="filter_gender">Geschlecht</string>
    <string name="filter_saveButton_label">Filter speichern</string>
    <string name="maxDistance_label">Maximale Distanz</string>

    <string-array name="language_array">
        <item>Deutsch</item>
        <item>Englisch</item>
        <item>Russisch</item>
        <item>Indisch</item>
        <item>Französisch</item>
    </string-array>

    <string-array name="gender_array">
        <item>Mann</item>
        <item>Frau</item>
        <item>Alternativ</item>
    </string-array>


</resources>